<resources>
    <string name="app_name">Reddit App</string>
    <string name="package_name">com.udacity.ramshasaeed.redditapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="HomePage" translatable="false">home</string>
    <string name="liststate_key" translatable="false">listState</string>
    <string name="listitems" translatable="false">listItems</string>
    <string translatable="true" name="header_image">Header Image</string>

    <string name="completion_status">Completed!</string>
    <string name="search">search</string>
    <string name="sort">sort</string>
    <string name="title_favourites">Favourites</string>
    <string name="no_favourites">No Favourites</string>
    <string name="no_internet">No internet Connection!</string>
    <string name="post_image">This post contains image</string>
    <string name="data_fetch">Sorry Couldnt fetch data</string>
    <string name="content">Content</string>
    <string name="comments">Comments</string>
    <string name="score">Score</string>
    <string name="points">Points</string>

    <string name="open_in_browser">Open In Browser</string>
    <string translatable="false" name="data_update_key">com.udacity.ramhshasaeed.redditapp.ACTION_DATA_UPDATED</string>

    <string name="hot">Hot</string>
    <string name="new1">New</string>
    <string name="top">Top</string>
    <string name="controversial">Controversial</string>
    <string translatable="false" name="ad_unit_id">ca-app-pub-5476505127668399/8389744961</string>
    <string translatable="true" name="post_options_menu">Post options menu</string>
    <string translatable="true" name="post_favourite_selector">Post Favourite Selector</string>
    <string translatable="true" name="post_share_selector">Post Share Selector</string>
    <string name="image_icon_to_show_points_for_the_reddit_item">Image icon to show points for the reddit item</string>
    <string name="image_icon_to_show_number_of_comments_for_reddit_item">Image icon to show number of comments for reddit item.</string>

    <!--for Reddit List item tool text-->
    <string name="reddit_item_title">This is Title</string>
    <string translatable="false" name="reddit_id">id</string>
    <string translatable="false" name="reddit_title">title</string>
    <string translatable="false" name="arg_item_id">item_id</string>


</resources>
