<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">
<android.support.v7.widget.CardView
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    android:layout_margin="5dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/imgloadprogress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="visible" />
        <ImageView
            android:id="@+id/iv_item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/post_image"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transcolorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tool:text="@string/reddit_item_title"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:dividerPadding="5dp"
        android:divider="@drawable/vertical_divider"
        >
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:paddingStart="20dp"
            android:text="@string/content"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/tv_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="0.35"
            android:foregroundGravity="center_horizontal"
            android:gravity="center"
            android:text="@string/comments"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="0.35"
            android:gravity="center"
            android:text="@string/score"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            />

    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>
</layout>