<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.udacity.ramshasaeed.redditapp.DetailFragment" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mainSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_Height"
                android:contentDescription="@string/header_image"
                android:layout_marginTop="?attr/actionBarSize"
                android:scaleType="fitXY" />


            <LinearLayout
                android:id="@+id/linearheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:padding="10dp"
                android:weightSum="4"

                >

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:textColor="#ffffff"
                    android:drawablePadding="4dip"
                    />

                <TextView
                    android:id="@+id/commentsNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="#ffffff"
                    android:drawablePadding="4dip"
                    />

                <ImageButton
                    android:id="@+id/openbrowser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:text="@string/open_in_browser"
                    android:src="@android:drawable/ic_menu_agenda"
                    android:contentDescription="@string/post_options_menu"
                    android:focusable="true"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/titleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluishgrey"
                android:padding="10dp"

                >

                <TextView
                    android:id="@+id/headerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="20sp"

                    />


            </LinearLayout>


            <android.support.v7.widget.RecyclerView

                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:descendantFocusability="afterDescendants"
                app:layoutManager="LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/comment_item" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:orientation="vertical">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="@null"
        android:focusable="true"
        android:contentDescription="@string/post_favourite_selector"
        app:srcCompat="@drawable/selector"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/post_share_selector"
        app:srcCompat="@android:drawable/ic_menu_share"

        />
</LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id" />
</FrameLayout>
</layout>
